@@ -1,3 +1,8 @@
+2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
+	* Utils.cs: Updated according to CreateWebServiceDownloadUrl
+	changes.
+
 2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* WebServices.cs: Refactor CreateWebServiceDownloadUrl into
